[package]
name = "parse_idl"
version = "0.1.0"
edition = "2021"

[dependencies]
anchor-lang = "0.28.0"
borsh = "0.10.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
openssl = { version = "0.10", features = [] }
anchor-idl = "0.3.1"
heck = "0.4.1"
anyhow = "1.0.75"
log = "0.4.20"
